--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -497,10 +497,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-275-ribu">12 Jam 250 ribu</h4>
+    <h4 id="12-jam-275-ribu">•12 Jam 250 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-325-ribu">24 Jam 300 ribu</h4>
+    <h4 id="24-jam-325-ribu">•24 Jam 300 ribu</h4>
   </li>
 </ul>
 
@@ -510,10 +510,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-375-ribu">10 Jam 350 ribu</h4>
+    <h4 id="10-jam-375-ribu">•10 Jam 350 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
+    <h4 id="per-hari-450-ribu">•Per Hari 425 ribu</h4>
   </li>
 </ul>
 
@@ -523,10 +523,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-500-ribu">10 Jam 475 ribu</h4>
+    <h4 id="10-jam-500-ribu">•10 Jam 475 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-550-ribu">Per Hari 525 ribu</h4>
+    <h4 id="per-hari-550-ribu">•Per Hari 525 ribu</h4>
   </li>
 </ul>
 <p></p>
@@ -553,10 +553,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-250-ribu">12 Jam 225 ribu</h4>
+    <h4 id="12-jam-250-ribu">•12 Jam 225 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-300-ribu">24 Jam 275 ribu</h4>
+    <h4 id="24-jam-300-ribu">•24 Jam 275 ribu</h4>
   </li>
 </ul>
 
@@ -566,10 +566,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-350-ribu">10 Jam 325 ribu</h4>
+    <h4 id="10-jam-350-ribu">•10 Jam 325 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
+    <h4 id="per-hari-450-ribu">•Per Hari 425 ribu</h4>
   </li>
 </ul>
 
@@ -579,10 +579,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-450-ribu">10 Jam 425 ribu</h4>
+    <h4 id="10-jam-450-ribu">•10 Jam 425 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-550-ribu">Per Hari 525 ribu</h4>
+    <h4 id="per-hari-550-ribu">•Per Hari 525 ribu</h4>
   </li>
 </ul>
 <p></p>
@@ -609,10 +609,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-250-ribu">12 Jam 225 ribu</h4>
+    <h4 id="12-jam-250-ribu">•12 Jam 225 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-300-ribu">24 Jam 275 ribu</h4>
+    <h4 id="24-jam-300-ribu">•24 Jam 275 ribu</h4>
   </li>
 </ul>
 
@@ -622,10 +622,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-350-ribu">10 Jam 325 ribu</h4>
+    <h4 id="10-jam-350-ribu">•10 Jam 325 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
+    <h4 id="per-hari-450-ribu">•Per Hari 425 ribu</h4>
   </li>
 </ul>
 
@@ -635,10 +635,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-450-ribu">10 Jam 425 ribu</h4>
+    <h4 id="10-jam-450-ribu">•10 Jam 425 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-500-ribu">Per Hari 475 ribu</h4>
+    <h4 id="per-hari-500-ribu">•Per Hari 475 ribu</h4>
   </li>
 </ul>
 <p></p>
@@ -665,10 +665,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-275-ribu">12 Jam 250 ribu</h4>
+    <h4 id="12-jam-275-ribu">•12 Jam 250 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-325-ribu">24 Jam 300 ribu</h4>
+    <h4 id="24-jam-325-ribu">•24 Jam 300 ribu</h4>
   </li>
 </ul>
 <p></p>
@@ -693,10 +693,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
   <ul>
     <li>
-      <h4 id="12-jam-250-ribu">12 Jam 225 ribu</h4>
+      <h4 id="12-jam-250-ribu">•12 Jam 225 ribu</h4>
     </li>
     <li>
-      <h4 id="24-jam-300-ribu">24 Jam 275 ribu</h4>
+      <h4 id="24-jam-300-ribu">•24 Jam 275 ribu</h4>
     </li>
   </ul>
 
@@ -729,10 +729,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-250-ribu">12 Jam 200 ribu</h4>
+    <h4 id="12-jam-250-ribu">•12 Jam 200 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-300-ribu">24 Jam 250 ribu</h4>
+    <h4 id="24-jam-300-ribu">•24 Jam 250 ribu</h4>
   </li>
 </ul>
 
@@ -742,10 +742,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-350-ribu">10 Jam 325 ribu</h4>
+    <h4 id="10-jam-350-ribu">•10 Jam 325 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
+    <h4 id="per-hari-450-ribu">•Per Hari 425 ribu</h4>
   </li>
 </ul>
 
@@ -758,7 +758,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
     <h4 id="10-jam-450-ribu">10 Jam 425 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-500-ribu">Per Hari 475 ribu</h4>
+    <h4 id="per-hari-500-ribu">•Per Hari 475 ribu</h4>
   </li>
 </ul>
 <p></p>
@@ -787,10 +787,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-275-ribu">12 Jam 250 ribu</h4>
+    <h4 id="12-jam-275-ribu">•12 Jam 250 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-325-ribu">24 Jam 300 ribu</h4>
+    <h4 id="24-jam-325-ribu">•24 Jam 300 ribu</h4>
   </li>
 </ul>
 
@@ -800,10 +800,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-350-ribu">10 Jam 325 ribu</h4>
+    <h4 id="10-jam-350-ribu">•10 Jam 325 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
+    <h4 id="per-hari-450-ribu">•Per Hari 425 ribu</h4>
   </li>
 </ul>
 
@@ -813,10 +813,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-450-ribu">10 Jam 425 ribu</h4>
+    <h4 id="10-jam-450-ribu">•10 Jam 425 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-500-ribu">Per Hari 475 ribu</h4>
+    <h4 id="per-hari-500-ribu">•Per Hari 475 ribu</h4>
   </li>
 </ul>
 <li class="staff">
@@ -838,10 +838,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-250-ribu">12 Jam 200 ribu</h4>
+    <h4 id="12-jam-250-ribu">•12 Jam 200 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-300-ribu">24 Jam 250 ribu</h4>
+    <h4 id="24-jam-300-ribu">•24 Jam 250 ribu</h4>
   </li>
 </ul>
 
@@ -849,10 +849,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-350-ribu">12 Jam 325 ribu</h4>
+    <h4 id="12-jam-350-ribu">•12 Jam 325 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-400-ribu">Per Hari 375 ribu</h4>
+    <h4 id="per-hari-400-ribu">•Per Hari 375 ribu</h4>
   </li>
 </ul>
 
@@ -860,10 +860,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-450-ribu">12 Jam 425 ribu</h4>
+    <h4 id="12-jam-450-ribu">•12 Jam 425 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-550-ribu">Per Hari  525 ribu</h4>
+    <h4 id="per-hari-550-ribu">•Per Hari  525 ribu</h4>
   </li>
 </ul>
 <p></p>
