--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -498,25 +498,25 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 
 <ul>
   <li>
-    <h4 id="3-kamar-tidur-ac">3 Kamar Tidur AC</h4>
+    <h4 id="3-kamar-tidur-ac">•3 Kamar Tidur AC</h4>
   </li>
   <li>
-    <h4 id="1-kamar-musholla">1 Kamar Musholla</h4>
+    <h4 id="1-kamar-musholla">•1 Kamar Musholla</h4>
   </li>
   <li>
-    <h4 id="tv-di-setiap-kamar-tidur">TV Di Setiap Kamar Tidur</h4>
+    <h4 id="tv-di-setiap-kamar-tidur">•TV Di Setiap Kamar Tidur</h4>
   </li>
   <li>
-    <h4 id="2-kamar-mandi-luar">2 Kamar Mandi Luar</h4>
+    <h4 id="2-kamar-mandi-luar">•2 Kamar Mandi Luar</h4>
   </li>
   <li>
-    <h4 id="1-ruang-tamu">1 Ruang Tamu</h4>
+    <h4 id="1-ruang-tamu">•1 Ruang Tamu</h4>
   </li>
   <li>
-    <h4 id="1-ruang-keluarga-dengan-lcd-tv-dan-ruang-makan">1 Ruang Keluarga Dengan LCD TV Dan Ruang Makan</h4>
+    <h4 id="1-ruang-keluarga-dengan-lcd-tv-dan-ruang-makan">•1 Ruang Keluarga Dengan LCD TV Dan Ruang Makan</h4>
   </li>
   <li>
-    <h4 id="dapur-dengan-peralatan-dapur-yang-lengkap">Dapur Dengan Peralatan Dapur Yang Lengkap</h4>
+    <h4 id="dapur-dengan-peralatan-dapur-yang-lengkap">•Dapur Dengan Peralatan Dapur Yang Lengkap</h4>
   </li>
   <li>
     <h4 id="garasi">Garasi</h4>
@@ -547,13 +547,13 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
     <h4 id="cek-in--1300-wib-cek-out--1200-wib">Cek In : 13.00 WIB Cek Out : 12.00 WIB</h4>
   </li>
   <li>
-    <h4 id="fasilitas--ac-tv-bed-free-wifi-coffe-kamar-mandi-dalam-air-panas">Fasilitas : AC, TV, Bed, Free Wifi, Coffe, Kamar Mandi Dalam (Air Panas)</h4>
+    <h4 id="fasilitas--ac-tv-bed-free-wifi-coffe-kamar-mandi-dalam-air-panas">•Fasilitas : AC, TV, Bed, Free Wifi, Coffe, Kamar Mandi Dalam (Air Panas)</h4>
   </li>
   <li>
-    <h4 id="extra-bedperson--rp-25000--malam">Extra Bed/person : Rp. 25.000 / Malam</h4>
+    <h4 id="extra-bedperson--rp-25000--malam">•Extra Bed/person : Rp. 25.000 / Malam</h4>
   </li>
   <li>
-    <h4 id="extra-time--rp-15000-per-jam-selama-persediaan-kamar-masih-ada">Extra Time : Rp. 15.000 per jam (selama persediaan kamar masih ada)</h4>
+    <h4 id="extra-time--rp-15000-per-jam-selama-persediaan-kamar-masih-ada">•Extra Time : Rp. 15.000 per jam (selama persediaan kamar masih ada)</h4>
   </li>
 </ul>
 <p></p>
@@ -584,13 +584,13 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
     <h4 id="cek-in--1300-wib-cek-out--1200-wib">Cek In : 13.00 WIB Cek Out : 12.00 WIB</h4>
   </li>
   <li>
-    <h4 id="fasilitas--ac-tv-bed-free-wifi-coffe-kamar-mandi-luar">Fasilitas : AC, TV, Bed, Free Wifi, Coffe, Kamar Mandi Luar</h4>
+    <h4 id="fasilitas--ac-tv-bed-free-wifi-coffe-kamar-mandi-luar">•Fasilitas : AC, TV, Bed, Free Wifi, Coffe, Kamar Mandi Luar</h4>
   </li>
   <li>
-    <h4 id="extra-bedperson--rp-25000--malam">Extra Bed/person : Rp. 25.000 / Malam</h4>
+    <h4 id="extra-bedperson--rp-25000--malam">•Extra Bed/person : Rp. 25.000 / Malam</h4>
   </li>
   <li>
-    <h4 id="extra-time--rp-15000-per-jam-selama-persediaan-kamar-masih-ada">Extra Time : Rp. 15.000 per jam (selama persediaan kamar masih ada)</h4>
+    <h4 id="extra-time--rp-15000-per-jam-selama-persediaan-kamar-masih-ada">•Extra Time : Rp. 15.000 per jam (selama persediaan kamar masih ada)</h4>
   </li>
 </ul>
 <p></p>
