--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -775,7 +775,7 @@ h3  { text-decoration: underline overline;
 
   <li>
 
-    <h4 id="jas-hujan-selama-persediaan-masih-ada">Jas hujan (selama persediaan masih ada)</h4>
+    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
 
   </li>
 
