--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -492,7 +492,7 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 
 
 <blockquote>
-  <h4 id="cek-in--1300-wib-cek-out--1200-wibfasilitas-">Cek In : 13.00 WIB Cek Out : 12.00 WIB<br />Fasilitas :</h4>
+  <h4 id="cek-in--1300-wib-cek-out--1200-wibfasilitas-">√Cek In : 13.00 WIB √Cek Out : 12.00 WIB<br />Fasilitas :</h4>
 </blockquote>
 
 
@@ -544,7 +544,7 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 
 <ul>
   <li>
-    <h4 id="cek-in--1300-wib-cek-out--1200-wib">Cek In : 13.00 WIB Cek Out : 12.00 WIB</h4>
+    <h4 id="cek-in--1300-wib-cek-out--1200-wib">√Cek In : 13.00 WIB √Cek Out : 12.00 WIB</h4>
   </li>
   <li>
     <h4 id="fasilitas--ac-tv-bed-free-wifi-coffe-kamar-mandi-dalam-air-panas">•Fasilitas : AC, TV, Bed, Free Wifi, Coffe, Kamar Mandi Dalam (Air Panas)</h4>
@@ -581,7 +581,7 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 
 <ul>
   <li>
-    <h4 id="cek-in--1300-wib-cek-out--1200-wib">Cek In : 13.00 WIB Cek Out : 12.00 WIB</h4>
+    <h4 id="cek-in--1300-wib-cek-out--1200-wib">√Cek In : 13.00 WIB √Cek Out : 12.00 WIB</h4>
   </li>
   <li>
     <h4 id="fasilitas--ac-tv-bed-free-wifi-coffe-kamar-mandi-luar">•Fasilitas : AC, TV, Bed, Free Wifi, Coffe, Kamar Mandi Luar</h4>
