--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -755,7 +755,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-450-ribu">10 Jam 425 ribu</h4>
+    <h4 id="10-jam-450-ribu">•10 Jam 425 ribu</h4>
   </li>
   <li>
     <h4 id="per-hari-500-ribu">•Per Hari 475 ribu</h4>
