--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ span.wave {
 <i><h1>WA 0818-267-443 / Rental Motor Sewa Mobil Jogja Penginapan Murah Yogyakarta</h1></i>
 </a><hr>
 	</div>
-<h4 style="text-align:center;"><q>Rental Motor Mulai <span class="stabilo">60rb/Hari</span> | Sewa Mobil Mulai <span class="stabilo">250rb/Hari</span> | Penginapan Mulai <span class="stabilo">150rb/Hari</span></q><br><hr><q><span class="stabilo">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h4><hr>
+<h4 style="text-align:center;"><q>Rental Motor Mulai <span class="stabilo">60rb/Hari</span> | Sewa Mobil Mulai <span class="stabilo">250rb/Hari</span> | Penginapan Mulai <span class="stabilo">125rb/Malam</span></q><br><hr><q><span class="stabilo">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h4><hr>
 
 <p style="text-align:center;">Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta.</p><hr>
 
@@ -418,7 +418,7 @@ span.wave {
 			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya"><small>Sewa mobil lepas kunci mulai 250 ribu perhari!!</small></a></p><p><img alt="mobil" src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m14.webp?&v2" width="260" height="139"></p>
 		</blockquote>
 <blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya"><small>Nginep nyaman semaleman di Jogja cuma 150 ribu!!&emsp;&emsp;</small></a></p><p><img alt="kamar" src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/kamar-icon1.webp?&v2" width="260" height="139"></p>
+			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya"><small>Nginep nyaman semaleman di Jogja cuma 125 ribu!!&emsp;&emsp;</small></a></p><p><img alt="kamar" src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/kamar-icon1.webp?&v2" width="260" height="139"></p>
 		</blockquote>             
 </div>
 </article>
