--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -409,7 +409,8 @@ h3  { text-decoration: underline overline;
 
 </style>
 
-
+<section class="main">
+<div class="container" data-cms-content-wrapper="/_layouts/default.html">
 
 	<div class="page-header"> 
 
