--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -424,9 +424,9 @@ h3  { text-decoration: underline overline;
 
 	<p class="editable" data-cms-source="/sewa-motor/index.html" data-cms-index="0">
 
-		Butuh motor cepett? Motor lagi di bengkel!? Motor ilang!?!?😂 Cepetan telepon ato WA Bening Abadi ajah buat nyewa motor!
+		Butuh motor cepettt? Motor lagi di bengkel!? Motor ilang!?!?😂 Cepetan telepon ato WA Bening Abadi ajah buat nyewa motor!
 
-	</p>
+	</p><hr>
 
  <div class="editable" data-cms-source="/sewa-motor/index.html" data-cms-index="1">
 
