--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -424,7 +424,7 @@ h3  { text-decoration: underline overline;
 
 	<p class="editable" data-cms-source="/sewa-motor/index.html" data-cms-index="0">
 
-		Butuh motor cepettt? Motor lagi di bengkel!? Motor ilang!?!?😂 Cepetan telepon ato WA Bening Abadi ajah buat nyewa motor!
+		Butuh motor cepet? Motor lagi di bengkel!? Motor ilang!?!?😂 Buruan telepon ato WA Bening Abadi ajah buat nyewa motor!
 
 	</p><hr>
 
