--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -991,7 +991,7 @@ ul.slide {
 </body>
 </html>
 <section class="quote-section">
-<p class="container editable" data-cms-source="/rental-mobil/index.html" data-cms-index="1">
+<p class="container editable" data-cms-source="/sewa-motor/index.html" data-cms-index="1">
 HOTLINE (0274)583197 &amp; (0274)547440 Untuk informasi lebih lanjut
 </p>
 </section>
