--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -389,6 +389,14 @@ span.wave {
 	
 
 </nav>
+<html lang="id">
+<head>
+<style>
+h1  { text-decoration: underline ;
+    }
+h3  { text-decoration: underline overline;
+    }
+</style>
 
 		<section class="main">
 
@@ -397,18 +405,6 @@ span.wave {
 				<html lang="id">
 
 <head>
-
-<style>
-h1  { text-decoration: underline ;
-
-    }
-
-h3  { text-decoration: underline overline;
-
-    }
-
-</style>
-
 <section class="main">
 <div class="container" data-cms-content-wrapper="/_layouts/default.html">
 
