--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -354,9 +354,9 @@ span.wave {
 </div>
 <nav>
 <a href="/">Home</a>
-        <a href="/sewa-motor/">SewAMotor</a>
+        <a href="/sewa-motor/" class=" active">SewAMotor</a>
     
-<a href="/rental-mobil/" class=" active">RentaLMobil</a>
+<a href="/rental-mobil/">RentaLMobil</a>
     
 <a href="/penginapan/">Penginapan</a>
 </nav>
@@ -371,13 +371,15 @@ h3  { text-decoration: underline overline;
 <section class="main">
 <div class="container" data-cms-content-wrapper="/_layouts/default.html">
 <div class="page-header"> 
-         <h1>Sewa Mobil Jogja</h1>
+         <h1>Sewa / Rental Motor Jogja</h1>
 </div>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 <p class="editable" data-cms-source="/penginapan/index.html" data-cms-index="1">
 Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil tapi mobil lagi mondok di bengkel,ya udah ngerental aja di Bening Abadi,mulai dari 250 rebu doank :)
 </p><hr>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
+	<h3>Daftar Rental Motor Jogja</h3>
+
 
 <ul class="staff-list">
 
