--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -375,8 +375,8 @@ h3  { text-decoration: underline overline;
 </div>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 <p class="editable" data-cms-source="/penginapan/index.html" data-cms-index="1">
-Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil tapi mobil lagi mondok di bengkel,ya udah ngerental aja di Bening Abadi,mulai dari 250 rebu doank :)
-</p><hr>
+Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport!!!
+</p>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 	<h3>Daftar Rental Motor Jogja</h3>
 
