--- a/index.html
+++ b/index.html
@@ -1223,5 +1223,6 @@ ul.slide {
 </p>
 			</div>
 		</footer>
-	</body>
+	<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "fea9eea7e1bd4d73a9d05c6ad2c75a19"}'></script><!-- End Cloudflare Web Analytics -->
+</body>
 </html>
