--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -904,5 +904,6 @@ Cabang Gamping Yogyakarta
 </p>
 </div>
 </footer>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "fea9eea7e1bd4d73a9d05c6ad2c75a19"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
