--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -724,6 +724,56 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
     <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
 
   </li>
+	
+	<li class="staff">
+
+			<div class="staff-details">
+
+				<ul class="staff-info">
+
+					<li><b><h3>Honda Vario 125</h3></b></li>
+
+					<li><p style="color:red"><80Rb/hari><160Rb/2hari><230Rb/3hari></p></li>
+
+				</ul>
+
+			</div>
+
+			<div class="staff-bio">
+
+				<p><blockquote>
+
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
+
+</blockquote>
+
+
+
+</p><h4 id="sewa-motor-murah-per-24-jam"><strong>Sewa Motor Murah Per 24 Jam</strong></h4>
+
+
+
+<ul>
+
+
+  <li>
+
+    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
+
+  </li>
+
+  <li>
+
+    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
+
+  </li>
+
+  <li>
+
+    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
+
+  </li>
+
 
 </ul>
 
