--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@ span.wave {
 <link rel="dns-prefetch" href="https://maps.gstatic.com">
 <link rel="preconnect" href="https://maps.gstatic.com">
 </head>
+	<div class="powr-popup" id="cd2c839e_1636248238"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
 <body>
 <div class="rowwa">
 <div class="columnwa">
