--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -393,7 +393,7 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
 
 					<li><b><h3>HONDA BEAT STREET NEW</h3></b></li>
 
-					<li><p style="color:red">✓ 60 Rb MAHASISWA ✓ 70 Rb UMUM</p></li>
+					<li><p style="color:red"><70Rb/hari><140Rb/2hari><200Rb/3hari></p></li>
 
 				</ul>
 
@@ -414,18 +414,6 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
 
 
 <ul>
-
-  <li>
-
-    <h4 id="65-ribu-karyumum">•70 Ribu (kary/umum)</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="55-ribu-mahasiswa-jogja">•60 Ribu (mahasiswa jogja)</h4>
-
-  </li>
 
   <li>
 
@@ -463,7 +451,7 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
 
 					<li><b><h3>HONDA GENIO NEW</h3></b></li>
 
-					<li><p style="color:red">✓ 70 Rb MAHASISWA ✓ 80 Rb UMUM</p></li>
+					<li><p style="color:red"><80Rb/hari><160Rb/2hari><230Rb/3hari></p></li>
 
 				</ul>
 
@@ -484,18 +472,6 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
 
 
 <ul>
-
-  <li>
-
-    <h4 id="65-ribu-karyumum">•80 ribu (kary/umum)</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="55-ribu-mahasiswa-jogja">•70 ribu (mahasiswa jogja)</h4>
-
-  </li>
 
   <li>
 
@@ -533,7 +509,7 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
 
 					<li><b><h3>Honda Beat</h3></b></li>
 
-					<li><p style="color:red">✓ 60 Rb MAHASISWA ✓ 70 Rb UMUM</p></li>
+					<li><p style="color:red"><70Rb/hari><140Rb/2hari><200Rb/3hari></p></li>
 
 				</ul>
 
@@ -554,18 +530,6 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
 
 
 <ul>
-
-  <li>
-
-    <h4 id="60000-karyumum">•70.000 (kary/umum)</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="50000-mahasiswa-jogja">•60.000 (mahasiswa jogja)</h4>
-
-  </li>
 
   <li>
 
@@ -603,7 +567,7 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
 
 					<li><b><h3>Honda Scoopy</h3></b></li>
 
-					<li><p style="color:red">✓ 70 Rb MAHASISWA ✓ 80 Rb UMUM</p></li>
+					<li><p style="color:red"><80Rb/hari><160Rb/2hari><230Rb/3hari></p></li>
 
 				</ul>
 
@@ -625,17 +589,6 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
 
 <ul>
 
-  <li>
-
-    <h4 id="60000-karyumum">•80.000 (kary/umum)</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="50000-mahasiswa-jogja">•70.000 (mahasiswa jogja)</h4>
-
-  </li>
 
   <li>
 
@@ -673,7 +626,7 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
 
 					<li><b><h3>Honda Vario 150</h3></b></li>
 
-					<li><p style="color:red">✓ 90 Rb MAHASISWA ✓ 100 Rb UMUM</p></li>
+					<li><p style="color:red"><100Rb/hari><200Rb/2hari><290Rb/3hari></p></li>
 
 				</ul>
 
@@ -694,18 +647,6 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
 
 
 <ul>
-
-  <li>
-
-    <h4 id="60000-karyumum">•100.000 (kary/umum)</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="50000-mahasiswa-jogja">•90.000 (mahasiswa jogja)</h4>
-
-  </li>
 
   <li>
 
