--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ input[type=submit]:hover, .btn:hover { color: #fefefe; background-color: #73a9c9
 /*# sourceMappingURL=main.css.map */
  
 nav  {position:flex; width:100%; display:flex; justify-content:center; background:rgba(255,255,255,0.5);z-index:999}
-nav a {display:inline-block; text-decoration:none; padding:2px; color:#000; letter-spacing:1px; font-size:0.5em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
+nav a {display:inline-block; text-decoration:none; padding:1px; color:#000; letter-spacing:1px; font-size:0.5em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
 span.wave {
   animation-name: wave-animation;
   animation-duration: 2.5s;
@@ -425,6 +425,343 @@ span.wave {
 </article>
 <hr>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
+	<ul class="staff-list">
+
+	
+
+		<li class="staff">
+
+			<div class="staff-details">
+
+				<ul class="staff-info">
+
+					<li><b><h3>HONDA BEAT STREET NEW</h3></b></li>
+
+					<li><p style="color:red"><70Rb/hari><140Rb/2hari><200Rb/3hari></p></li>
+
+				</ul>
+
+			</div>
+
+			<div class="staff-bio">
+
+				<p><blockquote>
+
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/beat-trail.jpg?func=crop&w=200&h=200&v2"></p>
+
+</blockquote>
+
+
+
+</p><h4 id="harga-sewa-motor-murah-per-24-jam"><strong>Harga Sewa Motor Murah Per 24 Jam</strong></h4>
+
+
+
+<ul>
+
+  <li>
+
+    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
+
+  </li>
+
+  <li>
+
+    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
+
+  </li>
+
+  <li>
+
+    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
+
+  </li>
+
+</ul>
+
+<p></p>
+
+			</div>
+
+		</li>
+
+	
+
+		<li class="staff">
+
+			<div class="staff-details">
+
+				<ul class="staff-info">
+
+					<li><b><h3>HONDA GENIO NEW</h3></b></li>
+
+					<li><p style="color:red"><80Rb/hari><160Rb/2hari><230Rb/3hari></p></li>
+
+				</ul>
+
+			</div>
+
+			<div class="staff-bio">
+
+				<p><blockquote>
+
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/genio.jpg?func=crop&w=200&h=200&v2"></p>
+
+</blockquote>
+
+
+
+</p><h4 id="harga-sewa-motor-murah-per-24-jam"><strong>Harga Sewa Motor Murah Per 24 Jam</strong></h4>
+
+
+
+<ul>
+
+  <li>
+
+    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
+
+  </li>
+
+  <li>
+
+    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
+
+  </li>
+
+  <li>
+
+    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
+
+  </li>
+
+</ul>
+
+<p></p>
+
+			</div>
+
+		</li>
+
+	
+
+		<li class="staff">
+
+			<div class="staff-details">
+
+				<ul class="staff-info">
+
+					<li><b><h3>Honda Beat</h3></b></li>
+
+					<li><p style="color:red"><70Rb/hari><140Rb/2hari><200Rb/3hari></p></li>
+
+				</ul>
+
+			</div>
+
+			<div class="staff-bio">
+
+				<p><blockquote>
+
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/fjimg-20191224-145508.png?func=crop&w=200&h=200&v2"></p>
+
+</blockquote>
+
+
+
+</p><h4 id="sewa-motor-murah-per-24-jam"><strong>Sewa Motor Murah Per 24 Jam</strong></h4>
+
+
+
+<ul>
+
+  <li>
+
+    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
+
+  </li>
+
+  <li>
+
+    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
+
+  </li>
+
+  <li>
+
+    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
+
+  </li>
+
+</ul>
+
+<p></p>
+
+			</div>
+
+		</li>
+
+	
+
+		<li class="staff">
+
+			<div class="staff-details">
+
+				<ul class="staff-info">
+
+					<li><b><h3>Honda Scoopy</h3></b></li>
+
+					<li><p style="color:red"><80Rb/hari><160Rb/2hari><230Rb/3hari></p></li>
+
+				</ul>
+
+			</div>
+
+			<div class="staff-bio">
+
+				<p><blockquote>
+
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/scoopy.jpg?func=crop&w=200&h=200&v2"></p>
+
+</blockquote>
+
+
+
+</p><h4 id="harga-sewa-motor-murah-per-24-jam"><strong>Harga Sewa Motor Murah Per 24 Jam</strong></h4>
+
+
+
+<ul>
+
+
+  <li>
+
+    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
+
+  </li>
+
+  <li>
+
+    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
+
+  </li>
+
+  <li>
+
+    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
+
+  </li>
+
+</ul>
+
+<p></p>
+
+			</div>
+
+		</li>
+
+	
+
+		<li class="staff">
+
+			<div class="staff-details">
+
+				<ul class="staff-info">
+
+					<li><b><h3>Honda Vario 150</h3></b></li>
+
+					<li><p style="color:red"><100Rb/hari><200Rb/2hari><290Rb/3hari></p></li>
+
+				</ul>
+
+			</div>
+
+			<div class="staff-bio">
+
+				<p><blockquote>
+
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
+
+</blockquote>
+
+
+
+</p><h4 id="sewa-motor-murah-per-24-jam"><strong>Sewa Motor Murah Per 24 Jam</strong></h4>
+
+
+
+<ul>
+
+  <li>
+
+    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
+
+  </li>
+
+  <li>
+
+    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
+
+  </li>
+
+  <li>
+
+    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
+
+  </li>
+	
+	<li class="staff">
+
+			<div class="staff-details">
+
+				<ul class="staff-info">
+
+					<li><b><h3>Honda Vario 125</h3></b></li>
+
+					<li><p style="color:red"><80Rb/hari><160Rb/2hari><230Rb/3hari></p></li>
+
+				</ul>
+
+			</div>
+
+			<div class="staff-bio">
+
+				<p><blockquote>
+
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
+
+</blockquote>
+
+
+
+</p><h4 id="sewa-motor-murah-per-24-jam"><strong>Sewa Motor Murah Per 24 Jam</strong></h4>
+
+
+
+<ul>
+
+
+  <li>
+
+    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
+
+  </li>
+
+  <li>
+
+    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
+
+  </li>
+
+  <li>
+
+    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
+
+  </li>
+
+
+</ul>
+
 <h2>Daftar Rental Mobil Jogja</h2>
 <ul class="staff-list">
 <li class="staff">
