--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ span.wave {
 
 					<li><b><h3>HONDA BEAT STREET NEW</h3></b></li>
 
-					<li><p style="color:red"><70Rb/hari><140Rb/2hari><200Rb/3hari></p></li>
+					<li><p style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</p></li>
 
 				</ul>
 
@@ -495,7 +495,7 @@ span.wave {
 
 					<li><b><h3>HONDA GENIO NEW</h3></b></li>
 
-					<li><p style="color:red"><80Rb/hari><160Rb/2hari><230Rb/3hari></p></li>
+					<li><p style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</p></li>
 
 				</ul>
 
@@ -553,7 +553,7 @@ span.wave {
 
 					<li><b><h3>Honda Beat</h3></b></li>
 
-					<li><p style="color:red"><70Rb/hari><140Rb/2hari><200Rb/3hari></p></li>
+					<li><p style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</p></li>
 
 				</ul>
 
@@ -611,7 +611,7 @@ span.wave {
 
 					<li><b><h3>Honda Scoopy</h3></b></li>
 
-					<li><p style="color:red"><80Rb/hari><160Rb/2hari><230Rb/3hari></p></li>
+					<li><p style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</p></li>
 
 				</ul>
 
@@ -670,7 +670,7 @@ span.wave {
 
 					<li><b><h3>Honda Vario 150</h3></b></li>
 
-					<li><p style="color:red"><100Rb/hari><200Rb/2hari><290Rb/3hari></p></li>
+					<li><p style="color:red">100Rb/hari•200Rb/2hari•290Rb/3hari</p></li>
 
 				</ul>
 
@@ -718,7 +718,7 @@ span.wave {
 
 					<li><b><h3>Honda Vario 125</h3></b></li>
 
-					<li><p style="color:red"><80Rb/hari><160Rb/2hari><230Rb/3hari></p></li>
+					<li><p style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</p></li>
 
 				</ul>
 
