--- a/index.html
+++ b/index.html
@@ -427,9 +427,9 @@ span.wave {
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 				<ul class="staff-info">
 
-					<li><b><h3>HONDA BEAT STREET NEW</h3></b></li>
+					<li><b>HONDA BEAT STREET NEW</b></li>
 
-					<li><p style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</p></li>
+					<p style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</p>
 
 				</ul>
 
