--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ span.wave {
 <link rel="dns-prefetch" href="https://maps.gstatic.com">
 <link rel="preconnect" href="https://maps.gstatic.com">
 </head>
-	<div class="powr-popup" id="cd2c839e_1636248238"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
+<div class="powr-popup" id="cd2c839e_1636248238"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
 <body>
 <div class="rowwa">
 <div class="columnwa">
@@ -429,7 +429,7 @@ span.wave {
 
 					<li><b>HONDA BEAT STREET NEW</b></li>
 
-					<p style="color:red"><h4>70Rb/hari•140Rb/2hari•200Rb/3hari</h4></p>
+					<li><h4>70Rb/hari•140Rb/2hari•200Rb/3hari</h4></li>
 
 				</ul>
 
