--- a/index.html
+++ b/index.html
@@ -425,7 +425,8 @@ span.wave {
 </article>
 <hr>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
-				<ul class="staff-info">
+			<div class="staff-details">
+	<ul class="staff-info">
 
 					<li><b>HONDA BEAT STREET NEW</b></li>
 
