--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ span.wave {
 
 					<li><b>HONDA BEAT STREET NEW</b></li>
 
-					<li><h4>70Rb/hari•140Rb/2hari•200Rb/3hari</h4></li>
+					<li><h4 style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</h4></li>
 
 				</ul>
 
@@ -482,9 +482,9 @@ span.wave {
 
 				<ul class="staff-info">
 
-					<li><b><h3>HONDA GENIO NEW</h3></b></li>
+					<li><b>HONDA GENIO NEW</b></li>
 
-					<li><p style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</p></li>
+					<li><h4 style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</h4></li>
 
 				</ul>
 
@@ -536,9 +536,9 @@ span.wave {
 
 				<ul class="staff-info">
 
-					<li><b><h3>Honda Beat</h3></b></li>
+					<li><b>Honda Beat</b></li>
 
-					<li><p style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</p></li>
+					<li><h4 style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</h4></li>
 
 				</ul>
 
@@ -590,9 +590,9 @@ span.wave {
 
 				<ul class="staff-info">
 
-					<li><b><h3>Honda Scoopy</h3></b></li>
+					<li><b>Honda Scoopy</b></li>
 
-					<li><p style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</p></li>
+					<li><h4 style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</h4></li>
 
 				</ul>
 
@@ -645,9 +645,9 @@ span.wave {
 
 				<ul class="staff-info">
 
-					<li><b><h3>Honda Vario 150</h3></b></li>
+					<li><b>Honda Vario 150</b></li>
 
-					<li><p style="color:red">100Rb/hari•200Rb/2hari•290Rb/3hari</p></li>
+					<li><h4 style="color:red">100Rb/hari•200Rb/2hari•290Rb/3hari</h4></li>
 
 				</ul>
 
@@ -693,9 +693,9 @@ span.wave {
 
 				<ul class="staff-info">
 
-					<li><b><h3>Honda Vario 125</h3></b></li>
+					<li><b>Honda Vario 125</b></li>
 
-					<li><p style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</p></li>
+					<li><h4 style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</h4></li>
 
 				</ul>
 
