--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@ span.wave {
     <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
 
   </li>
-	
+	</div>	
 	<li class="staff">
 
 			<div class="staff-details">
@@ -738,7 +738,7 @@ span.wave {
 
 
 </ul>
-</ul>
+</div>
 <h2>Daftar Rental Mobil Jogja</h2>
 <ul class="staff-list">
 <li class="staff">
