--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -665,6 +665,12 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
     <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
 
   </li>
+</ul>
+	<p></p>
+
+			</div>
+
+		</li>
 	
 	<li class="staff">
 
