--- a/index.html
+++ b/index.html
@@ -425,7 +425,9 @@ span.wave {
 </article>
 <hr>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
-			<div class="staff-details">
+<ul class="staff-list">
+<li class="staff">
+	<div class="staff-details">
 	<ul class="staff-info">
 
 					<li><b>HONDA BEAT STREET NEW</b></li>
@@ -443,40 +445,9 @@ span.wave {
   <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/beat-trail.jpg?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
-
-
-
-</p><h4 id="harga-sewa-motor-murah-per-24-jam"><strong>Harga Sewa Motor Murah Per 24 Jam</strong></h4>
-
-
-
-<ul>
-
-  <li>
-
-    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
-
-  </li>
-
-</ul>
-
 <p></p>
-
-			</div>
-
-		</li>
+</div>
+</li>
 
 			<div class="staff-details">
 
@@ -497,35 +468,6 @@ span.wave {
   <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/genio.jpg?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
-
-
-
-</p><h4 id="harga-sewa-motor-murah-per-24-jam"><strong>Harga Sewa Motor Murah Per 24 Jam</strong></h4>
-
-
-
-<ul>
-
-  <li>
-
-    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
-
-  </li>
-
-</ul>
-
 <p></p>
 
 			</div>
@@ -551,35 +493,6 @@ span.wave {
   <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/fjimg-20191224-145508.png?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
-
-
-
-</p><h4 id="sewa-motor-murah-per-24-jam"><strong>Sewa Motor Murah Per 24 Jam</strong></h4>
-
-
-
-<ul>
-
-  <li>
-
-    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
-
-  </li>
-
-</ul>
-
 <p></p>
 
 			</div>
@@ -605,36 +518,6 @@ span.wave {
   <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/scoopy.jpg?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
-
-
-
-</p><h4 id="harga-sewa-motor-murah-per-24-jam"><strong>Harga Sewa Motor Murah Per 24 Jam</strong></h4>
-
-
-
-<ul>
-
-
-  <li>
-
-    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
-
-  </li>
-
-</ul>
-
 <p></p>
 
 			</div>
@@ -660,33 +543,11 @@ span.wave {
   <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
+<p></p>
 
+			</div>
 
-
-</p><h4 id="sewa-motor-murah-per-24-jam"><strong>Sewa Motor Murah Per 24 Jam</strong></h4>
-
-
-
-<ul>
-
-  <li>
-
-    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
-
-  </li>
-	</div>
+		</li>
 
 			<div class="staff-details">
 
