--- a/index.html
+++ b/index.html
@@ -446,9 +446,9 @@ span.wave {
 
 </blockquote>
 <p></p>
-</div>
 </li>
-
+	</div>
+<li class="staff">
 			<div class="staff-details">
 
 				<ul class="staff-info">
@@ -469,11 +469,11 @@ span.wave {
 
 </blockquote>
 <p></p>
-
+				</li>
 			</div>
 
-		</li>
-
+	
+<li class="staff">
 			<div class="staff-details">
 
 				<ul class="staff-info">
@@ -494,11 +494,11 @@ span.wave {
 
 </blockquote>
 <p></p>
-
+				</li>
 			</div>
 
-		</li>
-
+		
+<li class="staff">
 			<div class="staff-details">
 
 				<ul class="staff-info">
@@ -519,11 +519,9 @@ span.wave {
 
 </blockquote>
 <p></p>
-
+				</li>
 			</div>
-
-		</li>
-
+<li class="staff">
 			<div class="staff-details">
 
 				<ul class="staff-info">
@@ -544,11 +542,11 @@ span.wave {
 
 </blockquote>
 <p></p>
-
+				</li>
 			</div>
 
-		</li>
-
+		
+<li class="staff">
 			<div class="staff-details">
 
 				<ul class="staff-info">
@@ -568,38 +566,11 @@ span.wave {
   <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
-
-
-
-</p><h4 id="sewa-motor-murah-per-24-jam"><strong>Sewa Motor Murah Per 24 Jam</strong></h4>
-
-
-
-<ul>
-
-
-  <li>
-
-    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
-
-  </li>
-
-  <li>
-
-    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
-
-  </li>
-
-
-</ul>
-</div>
-<h2>Daftar Rental Mobil Jogja</h2>
+<p></p>
+				</li>
+			</div>
+	</ul>
+	<h2>Daftar Rental Mobil Jogja</h2>
 <ul class="staff-list">
 <li class="staff">
 <div class="staff-details">
