--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ h3 { font-size: 2.5rem; }
 
 h4 { font-size: 1.5rem; }
 
-h5 { font-size: .9rem; }
+h5 { font-size: 1.1rem; }
 
 h6 { font-size: .8rem; }
 
@@ -563,7 +563,7 @@ span.wave {
 <p></p>
 				</li>
 			</div>
-	</ul>
+</ul>
 	<h2>Daftar Rental Mobil Jogja</h2>
 <ul class="staff-list">
 <li class="staff">
